manifests/teslamate/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate-grafana
  namespace: teslamate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: teslamate-grafana
  template:
    metadata:
      labels:
        app: teslamate-grafana
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
      - name: grafana
        image: teslamate/grafana:4.3.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: data
          mountPath: /var/lib/grafana
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 6
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: teslamate-grafana
