manifests/teslamate/database-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-database
  namespace: teslamate
spec:
  selector:
    app: teslamate-database
  ports:
  - port: 5432
    targetPort: 5432
