manifests/teslamate/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    pangolin.io/expose: "true"
    pangolin.io/subdomain: "teslamate"
    pangolin.io/auth: "false"
    pangolin.io/port: "3000"
spec:
  selector:
    app: teslamate-grafana
  ports:
  - port: 3000
    targetPort: 3000
