manifests/teslamate/mosquitto-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-mosquitto
  namespace: teslamate
spec:
  selector:
    app: teslamate-mosquitto
  ports:
  - port: 1883
    targetPort: 1883
