manifests/teslamate/postgres-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate-postgres-exporter
  namespace: teslamate
  labels:
    app: teslamate-postgres-exporter
spec:
  selector:
    app: teslamate-postgres-exporter
  ports:
  - name: metrics
    port: 9187
    targetPort: metrics
    protocol: TCP
